<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="buscapet.buscapet.CadastrarActivity">

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/cadastrarEmailTv"
        android:textAlignment="textEnd"
        app:layout_constraintBaseline_toBaselineOf="@+id/etEmail"
        app:layout_constraintEnd_toStartOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvEmail"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/cadastrarSenhaTv"
        android:textAlignment="textEnd"
        app:layout_constraintBaseline_toBaselineOf="@+id/etSenha"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvSenha"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <Button
        android:id="@+id/btCadastrar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/cadastrarCadastrarBt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSenha" />

    <TextView
        android:id="@+id/tvCadastrarSplash"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/cadastrarSplashText"
        android:textAlignment="center"
        android:textColor="@color/colorNiceDarkText"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayoutLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btCadastrar"
        app:layout_constraintVertical_bias="0.3" />

    <RelativeLayout
        android:id="@+id/relativeLayoutLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayoutVisita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvEntrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btCadastrarToLogin"
            android:text="@string/cadastrarLoginTv"
            android:textAlignment="textEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/btCadastrarToLogin"
            app:layout_constraintEnd_toStartOf="@+id/btCadastrarToLogin"
            android:gravity="end" />

        <Button
            android:id="@+id/btCadastrarToLogin"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginBottom="8dp"
            android:layout_toRightOf="@+id/tvEntrar"
            android:text="@string/cadastrarLoginBt"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="188dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutVisita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvVisita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btCadastrarToVisita"
            android:text="@string/cadastrarVisitaTv"
            android:textAlignment="textEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/btCadastrarToVisita"
            app:layout_constraintEnd_toStartOf="@+id/btCadastrarToVisita"
            android:gravity="end" />

        <Button
            android:id="@+id/btCadastrarToVisita"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginBottom="8dp"
            android:layout_toRightOf="@+id/tvVisita"
            android:text="@string/cadastrarVisitaBt"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="188dp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
