<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="buscapet.buscapet.SplashActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/tvBemvindo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/splashBemvindo"
        android:textAlignment="center"
        android:textColor="@color/colorNiceDarkText"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayoutLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBemvindo"
        app:srcCompat="@drawable/logo_buscapet" />

    <TextView
        android:id="@+id/tvCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/splashCadastrarTip"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayoutLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        app:layout_constraintVertical_bias="0.19999999" />

    <Button
        android:id="@+id/btSplashToCadastrar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/splashCadastrarBt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCadastrar" />

    <RelativeLayout
        android:id="@+id/relativeLayoutLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayoutVisita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvSplashToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btSplashToLogin"
            android:text="@string/cadastrarLoginTv"
            android:textAlignment="textEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/btSplashToLogin"
            app:layout_constraintEnd_toStartOf="@+id/btSplashToLogin"
            android:gravity="end" />

        <Button
            android:id="@+id/btSplashToLogin"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginBottom="8dp"
            android:layout_toRightOf="@+id/tvSplashToLogin"
            android:text="@string/cadastrarLoginBt"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="188dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutVisita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvSplashToVisita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btSplashToVisita"
            android:text="@string/cadastrarVisitaTv"
            android:textAlignment="textEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/btSplashToVisita"
            app:layout_constraintEnd_toStartOf="@+id/btSplashToVisita"
            android:gravity="end" />

        <Button
            android:id="@+id/btSplashToVisita"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginBottom="8dp"
            android:layout_toRightOf="@+id/tvSplashToVisita"
            android:text="@string/cadastrarVisitaBt"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="188dp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
